--- a/Zedit-UIKit/Base.lproj/Main.storyboard
+++ b/Zedit-UIKit/Base.lproj/Main.storyboard
@@ -101,7 +101,13 @@
                             <constraint firstItem="vFO-JR-S6s" firstAttribute="leading" secondItem="VlY-60-N81" secondAttribute="leading" id="j5p-ga-BQ5"/>
                         </constraints>
                     </view>
-                    <navigationItem key="navigationItem" id="XZH-BY-trp"/>
+                    <navigationItem key="navigationItem" id="XZH-BY-trp">
+                        <barButtonItem key="rightBarButtonItem" systemItem="add" id="aIg-kF-Rbh">
+                            <connections>
+                                <segue destination="yWS-xt-nX1" kind="presentation" identifier="Create" id="qqA-1n-aKM"/>
+                            </connections>
+                        </barButtonItem>
+                    </navigationItem>
                     <connections>
                         <outlet property="projectsCollectionView" destination="vFO-JR-S6s" id="bzH-8G-j6i"/>
                     </connections>
@@ -109,6 +115,94 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="J3M-uc-j2C" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="2626.7175572519081" y="-1044.3661971830986"/>
+        </scene>
+        <!--Create Project Collection View Controller-->
+        <scene sceneID="U4s-W1-Cgm">
+            <objects>
+                <viewController id="yWS-xt-nX1" customClass="CreateProjectCollectionViewController" customModule="Zedit_UIKit" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="ceu-HX-njB">
+                        <rect key="frame" x="0.0" y="0.0" width="393" height="842"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Lka-yF-Rkw">
+                                <rect key="frame" x="16" y="0.0" width="75" height="137"/>
+                                <state key="normal" title="Button"/>
+                                <buttonConfiguration key="configuration" style="plain" title="Button"/>
+                                <connections>
+                                    <action selector="cancelButtonTapped:" destination="yWS-xt-nX1" eventType="touchUpInside" id="tZk-U9-x3t"/>
+                                    <segue destination="hYy-BM-7Ke" kind="unwind" identifier="cancel" unwindAction="myUnwindActionWithUnwindSegue:" id="La6-p9-L5u"/>
+                                </connections>
+                            </button>
+                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" translatesAutoresizingMaskIntoConstraints="NO" id="Bej-KG-fH2">
+                                <rect key="frame" x="0.0" y="137" width="393" height="705"/>
+                                <subviews>
+                                    <button opaque="NO" contentMode="scaleToFill" verticalHuggingPriority="1000" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Sw3-ff-XIC">
+                                        <rect key="frame" x="0.0" y="0.0" width="393" height="34.333333333333336"/>
+                                        <state key="normal" title="Button"/>
+                                        <buttonConfiguration key="configuration" style="plain" title="Select Video"/>
+                                        <connections>
+                                            <action selector="selectVideoButtonTapped:" destination="yWS-xt-nX1" eventType="touchUpInside" id="nNC-uG-yR6"/>
+                                        </connections>
+                                    </button>
+                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="hev-bh-iPS">
+                                        <rect key="frame" x="0.0" y="34.333333333333371" width="393" height="562"/>
+                                        <color key="backgroundColor" systemColor="systemGray3Color"/>
+                                    </view>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Enter Project Name:" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="eBA-Vm-RWJ">
+                                        <rect key="frame" x="0.0" y="596.33333333333337" width="393" height="24"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="20"/>
+                                        <nil key="textColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                    <textField opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="248" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="dgd-S4-TpP">
+                                        <rect key="frame" x="0.0" y="620.33333333333337" width="393" height="30"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="30" id="Ggs-vz-WWz"/>
+                                        </constraints>
+                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                        <textInputTraits key="textInputTraits"/>
+                                    </textField>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="2ZT-qH-RvL">
+                                        <rect key="frame" x="0.0" y="650.33333333333337" width="393" height="20.333333333333371"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                        <nil key="textColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                    <button opaque="NO" contentMode="scaleToFill" verticalHuggingPriority="1000" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="kO5-TQ-z95">
+                                        <rect key="frame" x="0.0" y="670.66666666666663" width="393" height="34.333333333333371"/>
+                                        <state key="normal" title="Button"/>
+                                        <buttonConfiguration key="configuration" style="plain" title="Create Project"/>
+                                        <connections>
+                                            <action selector="createProjectButtonTapped:" destination="yWS-xt-nX1" eventType="touchUpInside" id="pGQ-VD-Se6"/>
+                                            <segue destination="hYy-BM-7Ke" kind="unwind" identifier="Create" unwindAction="myUnwindActionWithUnwindSegue:" id="28w-NI-d3G"/>
+                                        </connections>
+                                    </button>
+                                </subviews>
+                            </stackView>
+                        </subviews>
+                        <viewLayoutGuide key="safeArea" id="1UG-VX-ipz"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstItem="Lka-yF-Rkw" firstAttribute="top" secondItem="1UG-VX-ipz" secondAttribute="top" id="9b2-pY-Vqy"/>
+                            <constraint firstItem="Bej-KG-fH2" firstAttribute="leading" secondItem="1UG-VX-ipz" secondAttribute="leading" id="EHc-Hf-ZwR"/>
+                            <constraint firstItem="Lka-yF-Rkw" firstAttribute="leading" secondItem="ceu-HX-njB" secondAttribute="leadingMargin" id="HWN-KM-duy"/>
+                            <constraint firstItem="Bej-KG-fH2" firstAttribute="trailing" secondItem="1UG-VX-ipz" secondAttribute="trailing" id="abE-pT-mbo"/>
+                            <constraint firstItem="Bej-KG-fH2" firstAttribute="top" secondItem="Lka-yF-Rkw" secondAttribute="bottom" id="mSk-x6-2Sz"/>
+                            <constraint firstItem="1UG-VX-ipz" firstAttribute="bottom" secondItem="Bej-KG-fH2" secondAttribute="bottom" id="w9g-OV-xjS"/>
+                        </constraints>
+                    </view>
+                    <connections>
+                        <outlet property="createProjectButton" destination="kO5-TQ-z95" id="DEK-B6-INn"/>
+                        <outlet property="nameExistsLabel" destination="2ZT-qH-RvL" id="ZFu-c9-wBO"/>
+                        <outlet property="projectNameTextField" destination="dgd-S4-TpP" id="2pi-XS-db9"/>
+                        <outlet property="selectProjectButton" destination="Sw3-ff-XIC" id="Ekx-BV-1Rb"/>
+                        <outlet property="videoPlayerView" destination="hev-bh-iPS" id="pZm-gc-8uY"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="rKg-pu-KQ1" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+                <exit id="hYy-BM-7Ke" userLabel="Exit" sceneMemberID="exit"/>
+            </objects>
+            <point key="canvasLocation" x="3856" y="-1014"/>
         </scene>
         <!--Export View Controller-->
         <scene sceneID="ILe-pV-iYq">
@@ -553,7 +647,7 @@
         </scene>
     </scenes>
     <inferredMetricsTieBreakers>
-        <segue reference="v21-be-TDy"/>
+        <segue reference="hOP-xE-Jth"/>
     </inferredMetricsTieBreakers>
     <resources>
         <systemColor name="systemBackgroundColor">
